[metadata]
name = humblebundle-manager
version = 0.0.1
description = Manages Humble Bundle games and bundles
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
keywords = humblebundle
author = Rodrigo Silva
author_email = linux@rodrigosilva.com
url = https://github.com/MestreLion/humblebundle
license = GPLv3+
license_files = LICENSE.txt
project_urls =
    Source Code = https://github.com/MestreLion/humblebundle

[options]
zip_safe = True
include_package_data = True
install_requires =
    lxml
    progressbar
    keyring
    pyxdg
    dbus-python; platform_system=='Linux'
    secretstorage; platform_system=='Linux'
setup_requires =
    setuptools >=38.3.0
py_modules =
    httpbot
    humblebundle

[options.entry_points]
console_scripts =
    humblebundle = humblebundle:cli
